hphp/hack/test/typecheck/override_final7.php.exp
File "override_final7.php", line 21, characters 25-37:
You cannot override this method (Typing[4070])
File "override_final7.php", line 13, characters 25-37:
It was declared as final
